Updated Removed Duplicattes v2

--- a/config.json
+++ b/config.json
@@ -1,16 +1,14 @@
 {
     "companies": [
-        "tata",
-        "tesla"
+        "cricket"
     ],
     "keywords": [
-        "cars",
-        "power"
+        "ipl"
     ],
     "engine": [
         "google",
-        "bing",
-        "yahoo"
+        "yahoo",
+        "bing"
     ],
-    "pages": 2
+    "pages": 10
 }
